# Hw06_web

./: 1_create_table.py  2_insert_to_table.py  3_change_to_table py  4_update_table.py  5_select_to_table.py  Create_db_for_Hw06.sql  Hw06.db  README.md  db_connection.py  main.py  pyproject.toml  seeds.py
SQL`s/: queries_all.sql  query_10.sql  query_2.sql  query_3.sql  query_7.sql  query_8.sql  query_9.sql
